--- a/app/sass/components/form-box.sass
+++ b/app/sass/components/form-box.sass
@@ -2,7 +2,7 @@
   width: 100%
   max-width: 560px
   border: 1px solid $c-alto
-  border-radius: $radius-primary
+  border-radius: $r-primary
   background-color: $c-white
   padding: 40px 80px 60px
   +media-max($bp-md)
