--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,8 +13,10 @@
 @import ./vendors/simplebar
 // Pages
 @import ./pages/login-page
+@import ./pages/application-page
 // Components
 @import ./components/columng-group
+@import ./components/row-group
 @import ./components/svg-icon
 @import ./components/link
 @import ./components/form
@@ -22,7 +24,14 @@
 @import ./components/form-group
 @import ./components/form-divider
 @import ./components/input
+@import ./components/input-animation
+@import ./components/input-group
+@import ./components/radio
+@import ./components/checkbox
 @import ./components/button-group
 @import ./components/button
 @import ./components/select
 @import ./components/status-message
+@import ./components/inner-header
+@import ./components/application-form
+@import ./components/form-steps
