--- a/app/sass/pages/login-page.sass
+++ b/app/sass/pages/login-page.sass
@@ -7,6 +7,8 @@
   flex-direction: column
   justify-content: center
   align-items: center
+  background-color: $c-white
+  z-index: 1
   +media-max($bp-xl)
     padding: 40px 0 60px
   &:after,
