--- a/app/pug/partials/input.pug
+++ b/app/pug/partials/input.pug
@@ -1,15 +1,10 @@
 mixin input(props = {})
-  -const { classes, label, animated, name } = props
+  -const { classes, bordered, id } = props
   -
     const classnames = classNames({
-      'input__field': true,
+      'input': true,
+      'input--bordered': bordered,
       [classes]: classes,
     })
 
-  if(animated)
-    .input.js-input-animation
-      label.input__label.js-input-animation-label(for=name) #{label}
-      input(class=`${classnames} js-input-animation-field` id=name)&attributes(attributes)
-  else
-    .input
-      input(class=classnames)&attributes(attributes)
+  input(class=classnames id=id)&attributes(attributes)
