--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -22,17 +22,20 @@ $bp-xs : 360px
 $containers : ( $bp-xxl: $cnt-xl, $bp-xl: $cnt-lg, $bp-lg: $cnt-md, $bp-md: $cnt-sm, $bp-sm: $cnt-xs )
 $breakpoints: ( $bp-xxl: 'xxl', $bp-xl: 'xl', $bp-lg: 'lg', $bp-md: 'md', $bp-sm: 'sm', $bp-xs: 'xs' )
 // Main colors
-$c-white          : #ffffff
+$c-white          : #FFFFFF
+$c-athens-gray    : #EBEBEF
 $c-mine-shaft     : #3D3D3D
 $c-alto           : #DADADA
 $c-silver-chalice : #9D9D9D
 $c-tundora        : #444444
 $c-surfie-green   : #0E7D7D
 $c-cornflower-blue: #518EF8
-$c-azure-radiance : #1877F2
 $c-boston-blue    : #3F88C5
 $c-brick-red      : #CC2936
+$c-alabaster      : #F7F7F7
 // UI elements
-$body-bg: $c-white
+$body-bg: $c-athens-gray
 // Sizes
-$radius-primary: 3px
+$r-primary: 3px
+// Shadows
+$s-primary: 0px 4px 5px rgba(0, 0, 0, 0.05)
