--- a/app/sass/base/base.sass
+++ b/app/sass/base/base.sass
@@ -29,6 +29,12 @@ input::-ms-clear
   width: 0
 input, select, textarea, button
   font-family: inherit
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button
+  -webkit-appearance: none
+  margin: 0
+input[type=number]
+  -moz-appearance: textfield
 button
   border: none
   padding: 0
