--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -16,6 +16,14 @@ h2, .h2
   font-size: rem(35px)
   line-height: 1.2
   font-weight: 700
+h3, .h3
+  font-size: rem(22px)
+  line-height: 1.2
+  font-weight: 700
+h4, .h4
+  font-size: rem(16px)
+  line-height: 1.2
+  font-weight: 600
 
 p, .p
   font-size: rem(16px)
@@ -40,6 +48,8 @@ p, .p
   font-weight: 400
 .font-semibold
   font-weight: 600
+.font-bold
+  font-weight: 700
 
 // Text alignings
 .text-left
