--- a/app/sass/components/input.sass
+++ b/app/sass/components/input.sass
@@ -1,39 +1,20 @@
 .input
-  position: relative
-  // States
-  &.is-active
-    .input__label
-      top: 0
-      font-weight: 600
-      background-color: $c-white
-      color: $c-tundora
-  // Elemenst
-  &__label
-    position: absolute
-    padding: 0 5px
-    user-select: none
-    top: 50%
-    left: 10px
-    transform: translateY(-50%)
-    font-size: rem(15px)
-    font-weight: 400
-    line-height: 1
+  width: 100%
+  display: block
+  padding: 12px 15px 12px
+  font-size: rem(15px)
+  line-height: 1
+  font-weight: 400
+  border-radius: $r-primary
+  color: $c-tundora
+  background-color: $c-alabaster
+  transition: 0.2s
+  &:placeholder
     color: $c-silver-chalice
-    cursor: text
-    transition: 0.2s
-  &__field
-    width: 100%
-    display: block
-    padding: 10px 15px 11px
-    font-size: rem(15px)
-    line-height: 1
-    font-weight: 400
-    border-radius: $radius-primary
+  // Modifiers
+  &--bordered
     background-color: $c-white
     border: 1px solid $c-alto
-    color: $c-tundora
-    transition: 0.2s
-    &:placeholder
-      color: $c-silver-chalice
+    padding: 11px 15px 12px
     &:focus
       border-color: $c-surfie-green
