checkbox and radio were fixed

--- a/app/sass/components/checkbox.sass
+++ b/app/sass/components/checkbox.sass
@@ -1,8 +1,7 @@
 .checkbox
-  display: flex
+  display: inline-flex
+  vertical-align: top
   align-items: center
-  justify-content: space-between
-  width: 100%
   cursor: pointer
   &__name
     flex: 1
