--- a/app/sass/components/radio.sass
+++ b/app/sass/components/radio.sass
@@ -1,14 +1,13 @@
 .radio
-  display: flex
+  display: inline-flex
+  vertical-align: top
   align-items: center
-  justify-content: space-between
-  width: 100%
   cursor: pointer
   &__name
     flex: 1
     font-size: rem(14px)
-    line-height: 1
     font-weight: 600
+    line-height: 1
     user-select: none
     &:first-child
       margin-right: 10px
