--- a/app/sass/components/inner-header.sass
+++ b/app/sass/components/inner-header.sass
@@ -2,8 +2,8 @@
   width: 100%
   background-color: $c-white
   box-shadow: $s-primary
-  border-radius: 10px;
-  padding: 20px 0
+  border-radius: 0 0 10px 10px;
+  padding: 20px 15px
   &__wrap
     display: flex
     align-items: center
