--- a/app/pug/pages/application-page/step-1/card-1.pug
+++ b/app/pug/pages/application-page/step-1/card-1.pug
@@ -12,7 +12,7 @@
 
   .application-form__card-line
     .row
-      .col-12.col-md-5
+      .col-12.col-md-6
         .form-group
           .form-group__header
             p How do you calculate the price?
@@ -27,12 +27,12 @@
 
   .application-form__card-line
     .row
-      .col-md-7
+      .col-12.col-md-6.col-lg-7.mb-6.mb-md-0
         .form-group
           .form-group__header
             p What combinations do you translate?
           .row
-            .col-6
+            .col-12.col-lg-6.mb-4.mb-lg-0
               .input-group
                 .input-group__prepend
                   p From
@@ -45,7 +45,7 @@
                       {name:'German'},
                     ]
                   })
-            .col-6
+            .col-12.col-lg-6
               .input-group
                 .input-group__prepend
                   p To
@@ -58,26 +58,24 @@
                       {name:'German'},
                     ]
                   })
-      .col-md-5
+      .col-12.col-md-6.col-lg-5
         .form-group
           .form-group__header
             p Your prefered price per <span class="font-bold">1700 c.w.s.:</span>
-          .row
-            .col-12.col-md-8
-              .input-group
-                .input-group__input
-                  +input({})(type="number" placeholder="0.00")
-                .input-group__append.input-group__append--p-0
-                  +select({
-                    transparent:true,
-                    label:{name:'EUR', selected:true},
-                    options:[
-                      {name:'EUR'},
-                      {name:'GBP'},
-                      {name:'LVL'},
-                      {name:'LTL'},
-                    ]
-                  })
+          .input-group
+            .input-group__input
+              +input()(type="number" placeholder="0.00")
+            .input-group__append.input-group__append--p-0
+              +select({
+                transparent:true,
+                label:{name:'EUR', selected:true},
+                options:[
+                  {name:'EUR'},
+                  {name:'GBP'},
+                  {name:'LVL'},
+                  {name:'LTL'},
+                ]
+              })
 
   .application-form__card-line
     +button({type:'bordered'})(type="button")
