--- a/app/pug/pages/application-page/step-1/card-2.pug
+++ b/app/pug/pages/application-page/step-1/card-2.pug
@@ -11,7 +11,7 @@
 
   .application-form__card-line
     .row
-      .col-12.col-md-5
+      .col-12.col-md-6
         .form-group
           .form-group__header
             p How do you calculate the price?
@@ -25,41 +25,39 @@
           })
 
   .application-form__card-line
-    .row
-      .col-md-10
-        .form-group
-          .form-group__header
-            p What languages do you proofread?
-          .column-group.column-group--sm
-            +times(2)
-              .column-group__item
-                .row
-                  .col-4
+    .form-group
+      .form-group__header
+        p What languages do you proofread?
+      .column-group.column-group--sm
+        +times(2)
+          .column-group__item
+            .row
+              .col-12.col-md-4.mb-3.mb-md-0
+                +select({
+                  label:{name:'Lithianian', selected:true},
+                  options:[
+                    {name:'Lithianian'},
+                    {name:'English'},
+                    {name:'German'},
+                  ]
+                })
+              .col-12.col-md-8
+                .input-group
+                  .input-group__prepend
+                    p Your prefered price per <span class="font-bold">1 word</span>
+                  .input-group__input
+                    +input({})(type="number" placeholder="0.00")
+                  .input-group__append.input-group__append--p-0
                     +select({
-                      label:{name:'Lithianian', selected:true},
+                      transparent:true,
+                      label:{name:'EUR', selected:true},
                       options:[
-                        {name:'Lithianian'},
-                        {name:'English'},
-                        {name:'German'},
+                        {name:'EUR'},
+                        {name:'GBP'},
+                        {name:'LVL'},
+                        {name:'LTL'},
                       ]
                     })
-                  .col-8
-                    .input-group
-                      .input-group__prepend
-                        p Your prefered price per <span class="font-bold">1 word</span>
-                      .input-group__input
-                        +input({})(type="number" placeholder="0.00")
-                      .input-group__append.input-group__append--p-0
-                        +select({
-                          transparent:true,
-                          label:{name:'EUR', selected:true},
-                          options:[
-                            {name:'EUR'},
-                            {name:'GBP'},
-                            {name:'LVL'},
-                            {name:'LTL'},
-                          ]
-                        })
 
   .application-form__card-line
     +button({type:'bordered'})(type="button")
