--- a/app/pug/pages/application-page/step-1/card-4.pug
+++ b/app/pug/pages/application-page/step-1/card-4.pug
@@ -12,12 +12,12 @@
   +times(2)
     .application-form__card-line
       .row
-        .col-md-7
+        .col-12.col-md-6.col-lg-7.mb-6.mb-md-0
           .form-group
             .form-group__header
               +checkbox({ label:'Simultaneous Interpretig?', checked:true })
             .row
-              .col-6
+              .col-12.col-lg-6.mb-4.mb-lg-0
                 .input-group
                   .input-group__prepend
                     p From
@@ -30,7 +30,7 @@
                         {name:'German'},
                       ]
                     })
-              .col-6
+              .col-12.col-lg-6
                 .input-group
                   .input-group__prepend
                     p To
@@ -43,26 +43,24 @@
                         {name:'German'},
                       ]
                     })
-        .col-md-5
+        .col-12.col-md-5.col-lg-5
           .form-group
             .form-group__header
               p Your prefered price per <span class="font-bold">1 hr</span>
-            .row
-              .col-12.col-md-8
-                .input-group
-                  .input-group__input
-                    +input({})(type="number" placeholder="0.00")
-                  .input-group__append.input-group__append--p-0
-                    +select({
-                      transparent:true,
-                      label:{name:'EUR', selected:true},
-                      options:[
-                        {name:'EUR'},
-                        {name:'GBP'},
-                        {name:'LVL'},
-                        {name:'LTL'},
-                      ]
-                    })
+            .input-group
+              .input-group__input
+                +input({})(type="number" placeholder="0.00")
+              .input-group__append.input-group__append--p-0
+                +select({
+                  transparent:true,
+                  label:{name:'EUR', selected:true},
+                  options:[
+                    {name:'EUR'},
+                    {name:'GBP'},
+                    {name:'LVL'},
+                    {name:'LTL'},
+                  ]
+                })
 
     .application-form__card-line
       +button({type:'bordered'})(type="button")
