--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -5,7 +5,7 @@ html, body
   text-align: left
   font-weight: 400
   color: $c-mine-shaft
-  +media-max($bp-sm)
+  +media-max($bp-xs)
     font-size: 15px
 
 h1, .h1
